# academic-skill-backend

./: .gitignore  README.md  pyproject.toml  run_server.sh
academic-research-skill/: SKILL.md
academic-research-skill/agents/: openai.yaml
app/: main.py
app/api/: routes.py
app/api/v1/: blog.py  ppt.py  research.py  search.py  trending.py
app/core/: config.py  deps.py
app/schemas/: blog.py  jobs.py  ppt.py  research.py  search.py  trending.py
app/services/: blog.py  jobs.py  ppt.py  research.py  search.py  trending.py
app/storage/: s3.py
outputs/blog_tests/20260321_150723_2603.02604/: blog.md  blog_meta.json  result.json
outputs/research_tests/: 20260320_171938_i-want-to-train-my-model-for-multi-round-retrieval-ability,-.json  20260320_171938_i-want-to-train-my-model-for-multi-round-retrieval-ability,-.md  20260320_174911_i-want-to-train-my-model-for-multi-round-retrieval-ability,-.json  20260320_174911_i-want-to-train-my-model-for-multi-round-retrieval-ability,-.md  20260322_235756_i-want-to-train-my-model-for-multi-round-retrieval-ability,-.json  20260322_235756_i-want-to-train-my-model-for-multi-round-retrieval-ability,-.md  20260323_105022_i-want-to-train-my-model-for-multi-round-retrieval-ability,-.json  20260323_105022_i-want-to-train-my-model-for-multi-round-retrieval-ability,-.md
paper-ppt-generation-skill/: SKILL.md
scripts/: cleanup_job_artifacts.py  prewarm_trending.py  test_blog_job.py  test_ppt_job.py  test_research.py  test_s3_large_upload.py  test_upstream_ppt_minimal.py
tests/: test_job_and_services.py  test_s3_storage.py
(+24 files in other folders)
